fix: return nowrap

--- a/src/components/sidebar/sidebar.less
+++ b/src/components/sidebar/sidebar.less
@@ -151,6 +151,7 @@
 
       &-name {
         max-width: 150px;
+        white-space: nowrap;
       }
 
       &-actions {
